# etrigger

./: CMakeLists.txt  LICENSE  README.md
eTrigger/: AboutDialog.cpp  AboutDialog.h  AdminDialog.cpp  AdminDialog.h  App.cpp  App.h  Audio.cpp  Audio.h  AudioDialog.cpp  AudioDialog.h  CMakeLists.txt  CpuUsage.cpp  CpuUsage.h  DebugDialog.cpp  DebugDialog.h  Details.cpp  Details.h  DirSearch.cpp  DirSearch.h  DrumTypeCodes.h  Err.h  EtmEditorDialog2.cpp  EtmEditorDialog2.h  EtmFile.cpp  EtmFile.h  EtmPlayerDialog.cpp  EtmPlayerDialog.h  EtmPlayerOptions.cpp  EtmPlayerOptions.h  Joystick.cpp  Joystick.h  JoystickDialog.cpp  JoystickDialog.h  KeyToString.h  Main.cpp  Main.h  MainFrame.cpp  MainFrame.h  MainPanel.cpp  MainPanel.h  (+66 more)
eTriggerKeyGenerator/: App.cpp  App.h  CMakeLists.txt  KeyGen.cpp  KeyGen.h  KeyGenerator.txt
eTriggerServer/: App.cpp  App.h  CMakeLists.txt  UserData.cpp  UserData.h  app.rc  eTriggerServer.txt  server.cpp  server.h  tray.cpp  tray.h
eTriggerVST/: CMakeLists.txt  eTriggerVST.cpp  eTriggerVST.h  eTriggerVST.txt  wxDelay.cpp  wxDelay.h  wxDelayEditor.cpp  wxDelayEditor.h  wxDelayMain.cpp  wxDelayPanel.cpp  wxDelayPanel.h  wxVST.cpp  wxVST.h
lib/Gwidgets/: CMakeLists.txt
lib/Gwidgets/GButton/: GButton.cpp  GButton.h
lib/Gwidgets/GCurve/: GCurve.cpp  GCurve.h
lib/Gwidgets/GHelper/: GHelper.cpp  GHelper.h
lib/Gwidgets/GImage/: GImage.cpp  GImage.h
lib/Gwidgets/GImageSelector/: GImageSelector.cpp  GImageSelector.h
lib/Gwidgets/GKnob/: GKnob.cpp  GKnob.h
lib/Gwidgets/GLFont/: glfont2.cpp  glfont2.h
lib/Gwidgets/GLImage/: GLImage.cpp  GLImage.h
lib/Gwidgets/GMeter/: GMeter.cpp  GMeter.h
lib/Gwidgets/GNumberBox/: GNumberBox.cpp  GNumberBox.h
lib/Gwidgets/GScrollBar/: GScrollBar.cpp  GScrollBar.h  left.xpm  right.xpm
lib/Gwidgets/GSlider/: GSlider.cpp  GSlider.h
lib/Gwidgets/GText/: GText.cpp  GText.h
lib/Gwidgets/GToggle/: GToggle.cpp  GToggle.h
lib/RtAudio/: CMakeLists.txt  RtAudio.cpp
lib/RtAudio/tests/Windows/: audioprobe.vcproj  duplex.vcproj  playraw.vcproj  playsaw.vcproj  record.vcproj  rtaudio.sln  testall.vcproj
lib/RtAudio/tests/Windows/Debug/: BuildLog.htm  vc90.idb
lib/RtMidi/: CMakeLists.txt  RtMidi.cpp
lib/RtMidi/doc/: release.txt
lib/RtMidi/doc/_notes/: dwsync.xml
lib/RtMidi/doc/doxygen/: footer.html  tutorial.txt
lib/RtMidi/doc/doxygen/_notes/: dwsync.xml
lib/RtMidi/doc/html/_notes/: dwsync.xml
lib/RtMidi/doc/images/_notes/: dwsync.xml
lib/VstSDK/: CMakeLists.txt  VST Licensing Agreement.html
lib/VstSDK/beos/resource/: DelayEdit.r
lib/VstSDK/doc/: frame_up.html
lib/VstSDK/doc/html/plug/: others.html
lib/VstSDK/doc/html/plug/2.0/: VstOffline.html  VstTimeInfo.html  aeffectx.html
lib/VstSDK/doc/html/plug/gui/: AEffGuiEditor.html  CAnimKnob.html  CBitmap.html  CFileSelector.html  CFont.html  CHorizontalSlider.html  CHorizontalSwitch.html  CKickButton.html  CKnob.html  CLineStyle.html  CMovieButton.html  COffscreenContext.html  COnOffButton.html  CParamDisplay.html  CRect.html  CSpecialDigit.html  CSplashScreen.html  CTextEdit.html  CVerticalSwitch.html  VstKeyCode.html  introVSTGUI.html
lib/VstSDK/doc/html/plug/gui/examples/: controlsgui.h.html  controlsguimain.cpp.html
lib/VstSDK/doc/html/plug/gui/history/: changesV1toV2.html  (+1 more)
lib/VstSDK/mac/: ._adelayeditgui.rsrc  ._controlsgui.rsrc  VST2.3Examples.cww  adelay.prj  adelayeditguiinfo-plist.plc  adelayinfo-plist.plc  again.prj  againinfo-plist.plc  controlsgui.prj  controlsguiinfo-plist.plc
lib/VstSDK/mac/VST2.3Examples.pbproj/: project.pbxproj
lib/VstSDK/mac/VST2.3Examples.pbproj/CVS/: Entries
lib/VstSDK/mac/VstPlugins/: ._VSTMonitor
lib/VstSDK/mac/VstPlugins/VSTMonitor.vst/Contents/: PkgInfo
lib/VstSDK/resource/controlsgui/: bmp005.xpm  bmp007.xpm  bmp008.xpm  bmp009.xpm  bmp010.xpm  bmp013.xpm  bmp015.xpm
lib/VstSDK/resource/delayeditgui/: DelayEditGUI.rc
lib/VstSDK/sgi/: README.txt  again.mak  sgidef
lib/VstSDK/source/vstxsynth/: vstxsynth.cpp  vstxsynthmain.cpp
lib/VstSDK/win/: Offline.vcproj  VST2.3Examples.dsw  VST2.3Examples.sln  adelay.vcproj  again.vcproj  controlsgui.dsp  controlsgui.vcproj  delayeditgui.dsp  delayeditgui.vcproj  surrounddelay.def  surrounddelay.dsp  surrounddelay.vcproj  vstgui.dsp  vstgui.vcproj  vstxsynth.def  vstxsynth.dsp  vstxsynth.vcproj
lib/aubio/examples/: CMakeLists.txt  Copy of aubioonset.c  getopt.c  utils.c  utils.h
lib/aubio/examples/_notes/: dwsync.xml
lib/aubio/examples/tests/: test-onsetdetection.c
lib/aubio/examples/tests/_notes/: dwsync.xml
lib/cryptopp/: CMakeLists.txt  fipstest.cpp
lib/libresample/: CMakeLists.txt
lib/libresample/tests/: resample-sndfile.c
lib/libsndfile/: CMakeLists.txt
lib/libsndfile/MacOS/_notes/: dwsync.xml
lib/libsndfile/MacOS9/_notes/: dwsync.xml
lib/libsndfile/Octave/_notes/: dwsync.xml
lib/libsndfile/Win32/: UpgradeLog.XML  sndfile.lib  sndfile_d.lib
lib/libsndfile/Win32/Debug/: BuildLog.htm
lib/libsndfile/Win32/Debug/_notes/: dwsync.xml
lib/libsndfile/Win32/Release/: BuildLog.htm
lib/libsndfile/Win32/Release/_notes/: dwsync.xml
lib/libsndfile/Win32/_UpgradeReport_Files/_notes/: dwsync.xml
lib/libsndfile/Win32/_notes/: dwsync.xml
lib/libsndfile/doc/_notes/: dwsync.xml
lib/libsndfile/examples/_notes/: dwsync.xml
lib/libsndfile/man/_notes/: dwsync.xml
lib/libsndfile/regtest/_notes/: dwsync.xml
lib/libsndfile/src/G72x/_notes/: dwsync.xml
lib/libsndfile/src/GSM610/_notes/: dwsync.xml
lib/libsndfile/src/_notes/: dwsync.xml
lib/libsndfile/tests/_notes/: dwsync.xml
lib/mpg123/: CMakeLists.txt
lib/mpg123/ports/MSVC++/: mpg123.h  msvc.c
lib/mpg123/src/libmpg123/: compat.c  compat.h  debug.h  frame.h  icy.h  id3.c  index.h  libmpg123.c  mpg123.h.in  mpg123lib_intern.h  reader.h  readers.c  stringbuf.c
wxBlank/: App.cpp  App.h  CMakeLists.txt  Main.cpp  Main.h  app.xpm
wxGfxWidgets/: App.cpp  App.h  CMakeLists.txt  GAnimate.cpp  GAnimate.h  GImage.cpp  GImage.h  GImageSelector.cpp  GImageSelector.h  GObjectPanel.cpp  GObjectPanel.h  GSlider.cpp  GSlider.h  Main.cpp  MainPanel.cpp  MainPanel.h
(+403 files in other folders)
